--- a/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
+++ b/modules/gateway/assertions/SshAssertion/src/main/java/com/l7tech/external/assertions/ssh/console/SftpPollingListenerPropertiesDialog.form
@@ -217,7 +217,7 @@
                       <text value="Username"/>
                     </properties>
                   </component>
-                  <grid id="135ae" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                  <grid id="135ae" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                     <margin top="0" left="0" bottom="0" right="0"/>
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -245,27 +245,33 @@
                       </component>
                       <component id="ff133" class="com.l7tech.console.panels.SecurePasswordComboBox" binding="passwordField">
                         <constraints>
-                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                            <minimum-size width="100" height="-1"/>
+                            <preferred-size width="200" height="-1"/>
+                          </grid>
                         </constraints>
                       </component>
                       <component id="cf66" class="com.l7tech.console.panels.SecurePasswordComboBox" binding="privateKeyField">
                         <constraints>
-                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                            <minimum-size width="100" height="-1"/>
+                            <preferred-size width="200" height="-1"/>
+                          </grid>
                         </constraints>
                       </component>
+                      <hspacer id="77f1b">
+                        <constraints>
+                          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
                       <component id="7afdd" class="javax.swing.JButton" binding="managePasswordsPrivateKeysButton">
                         <constraints>
-                          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                         </constraints>
                         <properties>
                           <text value="Manage Stored Passwords"/>
                         </properties>
                       </component>
-                      <hspacer id="20c70">
-                        <constraints>
-                          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                        </constraints>
-                      </hspacer>
                     </children>
                   </grid>
                 </children>
